# Async_API_sprint_2

./: .env.example  Dockerfile  Dockerfile_tests  README.md  pyproject.toml
app/: main.py
app/api/docs/: tags.py
app/api/v1/: v1_router.py
app/api/v1/films/: films_router.py
app/api/v1/films/search/: search_router.py
app/api/v1/genres/: genres_router.py
app/api/v1/persons/: persons_router.py
app/api/v1/persons/film/: film_router.py
app/api/v1/persons/search/: search_router.py
app/core/: config.py  types.py
app/cruds/: base.py  elastic.py  get_crud.py  get_cruds.py
app/schemas/: elastic_responses.py
app/schemas/v1/: films_schemas.py  genres_schemas.py  params_schema.py  persons_schemas.py
app/services/api/: base.py
app/services/api/v1/: base.py
app/services/api/v1/films_service/: films_service.py
app/services/api/v1/genres_service/: genres_service.py
app/services/api/v1/persons_service/: persons_service.py
infra/: .env.example  docker-compose.yml
infra/nginx/: movies.conf
tests/functional/: .env.example  Dockerfile_tests  conftest.py  docker-compose.yml  settings.py
tests/functional/src/: test_films.py  test_genres.py  test_persons.py  test_search.py
tests/functional/testdata/: genres_data.py  movie_data.py  person_data.py
